# jira-cli

./: .gitignore  Cargo.toml  README.md  completion.bash
.workflow/jira/: context.yml  session.yml
jira/: Cargo.toml  autocomplete.bash
jira/src/: cli_args.yml  context.rs  jira_bindings.rs  main.rs
jira/src/git_bindings/: errors.rs  mod.rs  tests.rs
jira/src/jira_bindings/: mod.rs
jira/src/modules/: errors.rs  fetch_context.rs  mod.rs  set_context.rs  validate_context.rs
jira/src/utils/: io.rs
lib/fs/: Cargo.toml
lib/fs/src/: lib.rs
lib/git/: Cargo.toml
lib/git/src/: lib.rs
lib/jira/: Cargo.toml
lib/jira/src/: board.rs  client.rs  common.rs  issue.rs  lib.rs  network.rs  project.rs  sprint.rs
src/: jira.rs  main.rs
src/commands/: fetch.rs  init.rs  list.rs  mod.rs
src/utils/: config.rs  fs.rs  io.rs  mod.rs
workflow-bin/: Cargo.toml
workflow-bin/src/: cli_args.yml  context.rs  jira_bindings.rs  main.rs
workflow-bin/src/modules/: get_context.rs  mod.rs
workflow-bin/src/utils/: io.rs
