[package]
name = "work"
version = "0.1.0"
authors = ["Kevin Velasco <me@kvnvelasco.com>"]
edition = "2018"

[dependencies]
dialoguer = "0.3.0"
fs = { path = "../lib/fs"}
jira = {path = "../lib/jira"}
git = {path = "../lib/git"}
clap = {version = "2.32.0", features = ["yaml"]}
reqwest = "0.9.12"
ansi_term = "0.11.0"
serde = "1.0"
serde_derive = "1.0.89"
serde_yaml = "0.8"
url = "1.7.2"
log = "0.4.6"
env_logger = "0.6.1"
Inflector = "0.11.4"
